--- a/index.html
+++ b/index.html
@@ -78,67 +78,56 @@
 
     <!-- start hero -->
     <div class="hero bg-mainBG py-24 relative">
-        <div class="container mx-auto max-w-screen-xl -scroll-mx-auto">
+        <div class="container mx-auto max-w-screen-xl -scroll-mx-auto sm:mx-auto px-4">
             <div class="hero-content flex flex-col gap-20 items-start">
-                <div class="hero-title">
-                    <h1 class="text-6xl font-bold text-mainTXT leading-normal max-md:text-4xl">
+                <div class="hero-title max-xl:z-10">
+                    <h1 class="text-6xl leading-normal font-bold text-mainTXT">
                         Find & Search Your <br class="max-sm:hidden" />
-                        <div class="flex items-center">
-                            <div class="flex flex-col items-center">
-                                <span class="text-secondaryTXT leading-tight">Favourite</span>
-                                <img src="./assets/Vector 5.png" alt="" class="w-64 leading-tight max-md:w-36"
-                                    style="margin-top: -2px;">
-                            </div>
-                            <span class="text-mainTXT leading-tight ml-2">Doctor</span>
-                        </div>
+                        <span
+                            class=" relative text-secondaryTXT"> Favourite </span>
+                        Doctor
                     </h1>
+                    <img src="./assets/nav and hero/Vector 5.png" alt="" class="relative  max-sm:relative max-sm:bottom-24">
                     <p class="text-mainTXT">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
                         Sem velit viverra amet faucibus.
-                    </p>
+                    </p>    
                 </div>
-                <div class="input-hero z-10 bg-white flex gap-4 sm:gap-10 pl-10 py-3 pr-3 rounded-full items-center">
+                <div class="input-hero z-10 bg-white flex gap-32 pl-10 py-3 pr-3 rounded-full items-center  max-sm:relative   max-sm:gap-12">
                     <div class="doctor-name flex items-center gap-3">
-                        <img src="./assets/Group.png" alt="" />
-                        <p class="sm:block">Doctors Name</p>
-                        <img src="./assets/Vector 2 (1).png" alt="" />
+                        <img src="./assets/nav and hero/Group.png" alt="" />
+                        <p>Doctor’s Name</p>
+                        <img src="./assets/nav and hero/Vector 2 (1).png" alt="" />
                     </div>
                     <div class="location flex items-center gap-3">
-                        <img src="./assets/Group 1.png" alt="" />
-                        <p class="sm:block">Location</p>
-                        <img src="./assets/Vector 2 (1).png" alt="" />
+                        <img src="./assets/nav and hero/Group 1.png" alt="" />
+                        <p>Location</p>
+                        <img src="./assets/nav and hero/Vector 2 (1).png" alt="" />
                     </div>
                     <button
-                        class="search-icon bg-secondaryTXT p-2 sm:p-4 rounded-full flex justify-center items-center w-12 h-12 sm:w-14 sm:h-14 hover:brightness-75 transition-all">
-                        <img src="./assets/bi_search.png" alt="" />
+                        class="search-icon bg-secondaryTXT p-4 rounded-full flex justify-center items-center w-14 h-14 hover:brightness-75 transition-all">
+                        <img src="./assets/nav and hero/bi_search.png" alt="" />
                     </button>
                 </div>
             </div>
-            <img src="./assets/Ellipse 14.png" alt="" class="absolute right-0 bottom-0 -z-1 " />
+            <img src="./assets/nav and hero/Ellipse 14.png" alt="" class="absolute right-0 bottom-0 -z-1" />
         </div>
     </div>
     <div class="hero-bar bg-secondaryTXT py-4 relative">
-        <div
-            class="container mx-auto max-w-screen-xl flex flex-col md:flex-row items-center justify-start gap-10 max-sm:flex-col">
-            <img src="./assets/unsplash_SakqLf78KVo.png" alt=""
-                class="absolute right-0 bottom-0 w-3/5 max-md:hidden max-xl:hidden" />
-
-            <div class="bar-content flex flex-col gap-2 items-center text-center md:text-left">
-                <h1 class="text-white font-bold text-4xl md:text-6xl">24/7</h1>
+        <div class=" container mx-auto max-w-screen-xl -scroll-mx-auto flex items-center justify-start gap-10 max-sm:flex-col">
+            <img src="./assets/nav and hero/unsplash_SakqLf78KVo.png" alt="" class=" absolute right-0 bottom-0 w-3/5 max-md:hidden max-xl:hidden"  />
+            <div class="bar-content flex flex-col gap-2 items-center">
+                <h1 class="text-white font-bold text-6xl">24/7</h1>
                 <p class="text-white">Online Support</p>
             </div>
-
             <hr class="border-2 border-solid border-white w-20 rotate-90" />
-
             <div class="bar-content flex flex-col gap-2 items-center">
-                <h1 class="text-white font-bold text-4xl md:text-6xl">100+</h1>
+                <h1 class="text-white font-bold text-6xl">100+</h1>
                 <p class="text-white">Doctors</p>
             </div>
-
             <hr class="border-2 border-solid border-white w-20 rotate-90" />
-
-            <div class="bar-content flex flex-col gap-2 items-center text-center md:text-left">
-                <h1 class="text-white font-bold text-4xl md:text-6xl">1M+</h1>
+            <div class="bar-content flex flex-col gap-2 items-center">
+                <h1 class="text-white font-bold text-6xl">1M+</h1>
                 <p class="text-white">Active Patients</p>
             </div>
         </div>
