--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             class=" relative text-secondaryTXT"> Favourite </span>
                         Doctor
                     </h1>
-                    <img src="./assets/nav and hero/Vector 5.png" alt="" class="relative  max-sm:relative max-sm:bottom-24">
+                    <img src="./assets/Vector 5.png" alt="" class="relative  max-sm:relative max-sm:bottom-24">
                     <p class="text-mainTXT">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
                         Sem velit viverra amet faucibus.
@@ -95,27 +95,27 @@
                 </div>
                 <div class="input-hero z-10 bg-white flex gap-32 pl-10 py-3 pr-3 rounded-full items-center  max-sm:relative   max-sm:gap-12">
                     <div class="doctor-name flex items-center gap-3">
-                        <img src="./assets/nav and hero/Group.png" alt="" />
+                        <img src="./assets/Group.png" alt="" />
                         <p>Doctor’s Name</p>
-                        <img src="./assets/nav and hero/Vector 2 (1).png" alt="" />
+                        <img src="./assets/Vector 2 (1).png" alt="" />
                     </div>
                     <div class="location flex items-center gap-3">
-                        <img src="./assets/nav and hero/Group 1.png" alt="" />
+                        <img src="./assets/Group 1.png" alt="" />
                         <p>Location</p>
-                        <img src="./assets/nav and hero/Vector 2 (1).png" alt="" />
+                        <img src="./assets/Vector 2 (1).png" alt="" />
                     </div>
                     <button
                         class="search-icon bg-secondaryTXT p-4 rounded-full flex justify-center items-center w-14 h-14 hover:brightness-75 transition-all">
-                        <img src="./assets/nav and hero/bi_search.png" alt="" />
+                        <img src="./assets/bi_search.png" alt="" />
                     </button>
                 </div>
             </div>
-            <img src="./assets/nav and hero/Ellipse 14.png" alt="" class="absolute right-0 bottom-0 -z-1" />
+            <img src="./assets/Ellipse 14.png" alt="" class="absolute right-0 bottom-0 -z-1" />
         </div>
     </div>
     <div class="hero-bar bg-secondaryTXT py-4 relative">
         <div class=" container mx-auto max-w-screen-xl -scroll-mx-auto flex items-center justify-start gap-10 max-sm:flex-col">
-            <img src="./assets/nav and hero/unsplash_SakqLf78KVo.png" alt="" class=" absolute right-0 bottom-0 w-3/5 max-md:hidden max-xl:hidden"  />
+            <img src="./assets/unsplash_SakqLf78KVo.png" alt="" class=" absolute right-0 bottom-0 w-3/5 max-md:hidden max-xl:hidden"  />
             <div class="bar-content flex flex-col gap-2 items-center">
                 <h1 class="text-white font-bold text-6xl">24/7</h1>
                 <p class="text-white">Online Support</p>
